# Algorithms

./: .gitignore  .pre-commit-config.yaml  ALGORITHMS_TRACKER.md  CONTRIBUTING.md  LICENSE  README.md
python/: 2Partition.py  3Partition.py  3sum-closest.py  3sum.py  4sum.py  ArraySearch.py  CombinationSum.py  Consecutives.py  DeleteMiddleNode.py  DeleteRepeated.py  Fibonacci.py  FindDuplicates.py  Graphs.py  Graphs_2.py  InterviewZume.py  IsUnique.py  KthElement.py  Lists.py  LongestUnchangedSubstring.py  MagicIndex.py  MaxHeap.py  MergeSort.py  PalindromePermutation.py  PhoneNumberMnemonic.py  README.md  RootToLeafSum.py  SortByFirstNameAnLast.py  SortingWindowRange.py  Stacks-CorrectFormat.py  StringsAndArrays.py  TripleStep.py  UniqueCombos.py  __init__.py  adding-two-negabinary-numbers.py  alert-using-same-key-card-three-or-more-times-in-a-one-hour-period.py  algorithm_swaps.py  allocate-mailboxes.py  alphabet-board-path.py  analyze-user-website-visit-pattern.py  angle-between-hands-of-a-clock.py  (+460 more)
python/arrays/: BinarySearch.py  FindCode.py  Non-DecreasingArray.py  Partition.py  PossiblePairSum.py  RobotInAGrid.py  SelectionSort.py  SortStack.py  arranging-coins.py  array-transformation.py  average-waiting-time.py  best-time-to-buy-and-sell-stock-iii.py  binary-tree-maximum-path-sum.py  building-boxes.py  can-you-eat-your-favorite-candy-on-your-favorite-day.py  check-if-array-is-sorted-and-rotated.py  check-if-array-pairs-are-divisible-by-k.py  check-if-it-is-a-good-array.py  check-if-string-is-transformable-with-substring-sort-operations.py  climbing-stairs.py  closest-subsequence-sum.py  concatenation-of-consecutive-binary-numbers.py  construct-target-array-with-multiple-sums.py  construct-the-lexicographically-largest-valid-sequence.py  convert-integer-to-the-sum-of-two-no-zero-integers.py  coordinate-with-maximum-network-quality.py  count-negative-numbers-in-a-sorted-matrix.py  count-number-of-nice-subarrays.py  count-subtrees-with-max-distance-between-cities.py  count-ways-to-make-array-with-product.py  create-sorted-array-through-instructions.py  decrypt-string-from-alphabet-to-integer-mapping.py  determine-whether-matrix-can-be-obtained-by-rotation.py  divide-array-into-increasing-sequences.py  domino-and-tromino-tiling.py  dot-product-of-two-sparse-vectors.py  element-appearing-more-than-25-in-sorted-array.py  find-a-corresponding-node-of-a-binary-tree-in-a-clone-of-that-tree.py  find-all-the-lonely-nodes.py  find-and-replace-in-string.py  (+197 more)
python/backtracking/: Permutation.py
python/design/: TicTacToe.py  crawler-log-folder.py  design-file-system.py  design-parking-system.py  excel-sheet-column-title.py  magnetic-force-between-two-balls.py  statistics-from-a-large-sample.py
python/dynamic_programming/: 01-matrix.py  armstrong-number.py  basic-calculator-iv.py  circle-and-rectangle-overlapping.py  coin-change.py  confusing-number.py  customer_reviews.py  design-movie-rental-system.py  egg-drop-with-2-eggs-and-n-floors.py  fibonacci-number.py  filling-bookcase-shelves.py  five_star_sellers.py  four-divisors.py  how-many-numbers-are-smaller-than-the-current-number.py  largest-values-from-labels.py  letter-combinations-of-a-phone-number.py  lucky-numbers-in-a-matrix.py  n-th-tribonacci-number.py  number-of-1-bits.py  number-of-days-between-two-dates.py  number-of-digit-one.py  number-of-rectangles-that-can-form-the-largest-square.py  number-of-steps-to-reduce-a-number-to-zero.py  number-of-students-unable-to-eat-lunch.py  number-of-ways-to-stay-in-the-same-place-after-some-steps.py  number-of-ways-to-wear-different-hats-to-each-other.py  process-tasks-using-servers.py  put-boxes-into-the-warehouse-i.py  put-boxes-into-the-warehouse-ii.py  queries-on-number-of-points-inside-a-circle.py  rank-teams-by-votes.py  seat-reservation-manager.py  self-dividing-numbers.py  strobogrammatic-number-ii.py  sum-of-nodes-with-even-valued-grandparent.py  the-earliest-moment-when-everyone-become-friends.py  the-k-weakest-rows-in-a-matrix.py  ugly-number-iii.py  verbal-arithmetic-puzzle.py  video-stitching.py  (+1 more)
python/graphs/: RodCuttingDynamic.py  avoid-flood-in-the-city.py  course-schedule-ii.py  course-schedule.py  critical-connections-in-a-network.py  evaluate-division.py  number-of-closed-islands.py  number-of-operations-to-make-network-connected.py  number-of-ways-of-cutting-a-pizza.py
python/greedy/: airplane-seat-assignment-probability.py  meeting-rooms-ii.py  two-city-scheduling.py
python/hash_table/: GiftingGroups.py  bulls-and-cows.py  gifting_groups.py
python/heap/: frequency-of-the-most-frequent-element.py  largest-multiple-of-three.py
python/linked_lists/: add-two-polynomials-represented-as-linked-lists.py  buildTreeFromList.py  clone-binary-tree-with-random-pointer.py  delete-nodes-and-return-forest.py  insufficient-nodes-in-root-to-leaf-paths.py  intersection-of-two-linked-lists.py  merge-in-between-linked-lists.py  number-of-good-leaf-nodes-pairs.py  number-of-nodes-in-the-sub-tree-with-the-same-label.py  number-of-restricted-paths-from-first-to-last-node.py
python/math/: Primes.py  RectangleIntersect.py  fixed-point.py  hexspeak.py  latest-time-by-replacing-hidden-digits.py  sequential-digits.py  the-earliest-and-latest-rounds-where-players-compete.py
python/misc/: Calculator.py  OneAway.py  as-far-from-land-as-possible.py  basic-calculator-ii.py  basic-calculator-iii.py  calculate-money-in-leetcode-bank.py  campus-bikes-ii.py  cat-and-mouse.py  categorize.py  check-if-it-is-a-straight-line.py  check-if-n-and-its-double-exist.py  cpuEmulate.py  cracking-the-safe.py  destination-city.py  dice-roll-simulation.py  distribute-candies-to-people.py  exam-room.py  frog-position-after-t-seconds.py  handshakes-that-dont-cross.py  my-calendar-iii.py  occurrences-after-bigram.py  palindrom.py  pizza-with-3n-slices.py  reducing-dishes.py  richest-customer-wealth.py  robot-return-to-origin.py  the-dining-philosophers.py  time-needed-to-inform-all-employees.py  where-will-the-ball-fall.py
python/queue/: design-most-recently-used-queue.py
python/tests/: test_basic.py
(+220 files in other folders)
